<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray81">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:background="@color/colorGray81">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.35"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/colorGray81"
            android:text="@string/text_game_status"/>
        <CheckBox
            android:id="@+id/home_cb_status_unsolved"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/text_unsolved"/>
        <CheckBox
            android:id="@+id/home_cb_status_untried"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/text_untried"/>
        <CheckBox
            android:id="@+id/home_cb_status_solved"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/text_solved"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@color/colorGray81">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/colorGray81"
            android:text="@string/text_game_level"/>
        <CheckBox
            android:id="@+id/home_cb_diff_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/number_1"/>
        <CheckBox
            android:id="@+id/home_cb_diff_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/number_2"/>
        <CheckBox
            android:id="@+id/home_cb_diff_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/number_3"/>
        <CheckBox
            android:id="@+id/home_cb_diff_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/number_4"/>
        <CheckBox
            android:id="@+id/home_cb_diff_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/select_style"
            android:text="@string/number_5"/>

    </LinearLayout>
    <ListView
        android:id="@+id/home_lv_problems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray81"
        android:layout_margin="10dp" />

</LinearLayout>
