<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBrownGray">

        <ImageButton
            android:id="@+id/main_ib_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:scaleType="center"
            android:layout_alignParentStart="true"
            android:background="@drawable/back"/>
        <Chronometer
            android:id="@+id/main_chr_timer"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@color/colorBrownGray"
            android:textSize="20sp" />
    </RelativeLayout>


    <com.modev.sudoku.views.SudokuView
        android:id="@+id/main_suv_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:columnCount="3"
            android:rowCount="4"
            android:background="@color/white">
            <Button
                android:id="@+id/main_bt_num1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_1"/>
            <Button
                android:id="@+id/main_bt_num2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_2"/>

            <Button
                android:id="@+id/main_bt_num3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_3"/>

            <Button
                android:id="@+id/main_bt_num4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_4"/>

            <Button
                android:id="@+id/main_bt_num5"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_5"/>

            <Button
                android:id="@+id/main_bt_num6"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_6"/>
            <Button
                android:id="@+id/main_bt_num7"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_7"/>

            <Button
                android:id="@+id/main_bt_num8"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_8"/>

            <Button
                android:id="@+id/main_bt_num9"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/number_9"/>

            <Button
                android:id="@+id/main_bt_delete"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/text_delete" />
            <Button
                android:id="@+id/main_bt_clear_all"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/text_clear_all" />


            <Button
                android:id="@+id/main_bt_test"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:background="@drawable/normal_button_drawbable"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/text_test" />
        </GridLayout>
    </LinearLayout>
</LinearLayout>